katars/tests/snaps/snapshots/snap_errors__interp_undefined.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"print(\\\"hello {x}\\\")\")"
---
Error: undefined variable 'x'
   ╭─[<test>:1:15]
   │
 1 │ print("hello {x}")
   │               ┬  
   │               ╰── undefined variable 'x'
   │ 
   │ Help: check the spelling, or define 'x' with 'let'
───╯
